--- a/src/components/layouts/app-layout/app-layout.module.css
+++ b/src/components/layouts/app-layout/app-layout.module.css
@@ -28,6 +28,8 @@
 
 .sidebarLink {
   aspect-ratio: 1 / 1;
+  margin: var(--spacing-sm);
+  border-radius: var(--radius-sm);
 
   color: white;
 
@@ -38,6 +40,11 @@
   &:first-of-type {
     margin-top: auto;
   }
+}
+
+.sidebarLinkActive {
+  background-color: white;
+  color: var(--color-primary);
 }
 
 .header {
@@ -55,24 +62,53 @@
   background: var(--color-primary);
 
   display: flex;
+  justify-content: space-between;
   align-items: center;
 }
 
 .navbar {
-  background: var(--color-secondary);
+  max-height: 0;
+  overflow: hidden;
 
-  padding: var(--spacing-md);
+  background: var(--color-secondary);
 
   display: flex;
   flex-direction: column;
-  gap: var(--spacing-md);
+  gap: var(--spacing-sm);
+
+  transition: max-height 200ms;
+
+  &[data-open="true"] {
+    max-height: 150px;
+  }
 }
 
 .navbarLink {
+  margin: 0 var(--spacing-sm);
+  margin-top: var(--spacing-sm);
+  padding: var(--spacing-sm);
+  border-radius: var(--spacing-xs);
+
   color: white;
   text-decoration: none;
 
   display: flex;
   align-items: center;
-  gap: var(--spacing-md);
+  gap: var(--spacing-sm);
+
+  &:hover {
+    background: var(--color-secondary);
+  }
+
+  &:last-of-type {
+    margin-bottom: var(--spacing-sm);
+  }
+}
+
+.navbarLinkActive {
+  background: var(--color-primary);
+
+  &:hover {
+    background: var(--color-primary);
+  }
 }
