--- a/src/components/layouts/content-layout/content-layout.module.css
+++ b/src/components/layouts/content-layout/content-layout.module.css
@@ -6,10 +6,16 @@
 
   display: flex;
   flex-direction: column;
-  gap: var(--spacing-md);
 
-  &[data-centered] {
+  &[data-centered="true"] {
     justify-content: center;
     align-items: center;
   }
+}
+
+.inner {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: var(--spacing-md);
 }
