--- a/src/components/ui/modal/modal.module.css
+++ b/src/components/ui/modal/modal.module.css
@@ -1,5 +1,22 @@
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background: rgba(0 0 0 / 0.5);
+
+  &[data-entering] {
+    animation: modal-fade 200ms;
+  }
+
+  &[data-exiting] {
+    animation: modal-fade 150ms reverse ease-in;
+  }
+}
+
 .modal {
-  position: fixed;
+  position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
@@ -7,20 +24,31 @@
   background-color: var(--color-background);
 
   padding: var(--spacing-md);
-
   border-radius: var(--radius-md);
 
+  z-index: 110;
+
   &[data-entering] {
-    animation: modal-zoom 300ms cubic-bezier(0.175, 0.885, 0.32, 1.275);
+    animation: modal-zoom 300ms;
+  }
+}
+
+@keyframes modal-zoom {
+  from {
+    transform: scale(0.8);
   }
 
-  @keyframes modal-zoom {
-    from {
-      transform: scale(0.8);
-    }
+  to {
+    transform: scale(1);
+  }
+}
 
-    to {
-      transform: scale(1);
-    }
+@keyframes modal-fade {
+  from {
+    opacity: 0;
+  }
+
+  to {
+    opacity: 1;
   }
 }
