--- a/src/components/ui/sidebar/sidebar.module.css
+++ b/src/components/ui/sidebar/sidebar.module.css
@@ -10,9 +10,9 @@
   width: 256px;
   height: 100vh;
 
-  padding: var(--spacing-md);
-
   background: var(--color-secondary);
+
+  overflow: hidden;
 
   display: flex;
   flex-direction: column;
@@ -24,6 +24,11 @@
     width: 100%;
 
     height: fit-content;
+
+    &[data-open="false"] {
+      min-width: 0;
+      width: 0;
+    }
   }
 }
 
@@ -31,13 +36,15 @@
   font-size: var(--font-size-lg);
   font-weight: bolder;
 
-  padding-bottom: var(--spacing-sm);
+  margin: var(--spacing-sm);
 }
 
 .sidebarLink {
   color: var(--color-foreground);
   text-decoration: none;
 
+  margin-top: var(--spacing-sm);
+  margin: 0 var(--spacing-sm);
   padding: var(--spacing-sm);
 
   border-radius: var(--radius-sm);
@@ -45,6 +52,10 @@
   display: flex;
   align-items: center;
   gap: var(--spacing-sm);
+
+  &:last-of-type {
+    margin-bottom: var(--spacing-sm);
+  }
 }
 
 .active {
